--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -4,6 +4,40 @@
   <artifactId>SeleniumFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	
+	<build>
+  	<plugins>
+  		<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>3.10.1</version>
+        	<configuration>
+          		<source>1.8</source>
+          		<target>1.8</target>
+        	</configuration>
+      	</plugin>
+      	
+      	<plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <version>3.0.0-M7</version>
+	        <configuration>
+	          <suiteXmlFiles>
+	          	<!-- This will be use to select and execute testng.xml from the Jenkins -->
+	          	<suiteXmlFile>${TESTNG_XML}</suiteXmlFile>
+	          	
+	          	<!-- Execute any testng.xml from here  -->
+	            <!-- <suiteXmlFile>testng-test.xml</suiteXmlFile>  -->
+	          </suiteXmlFiles>
+	        </configuration>
+	     </plugin>
+  	</plugins>
+  </build>
   
   <dependencies>
   
