--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -52,7 +52,7 @@
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
-	    <version>7.10.2</version>
+	    <version>7.9.0</version>
 	</dependency> 
 	
 	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
@@ -76,6 +76,12 @@
 	    <version>2.23.1</version>
 	</dependency>
 		
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.15.0</version>
+	</dependency>
 		
 		
 	  	
